[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3      # Enable all optimisations.
lto = true         # Enable Link Time Optimisation.
codegen-units = 1  # Do not split code generation units.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
