[package]
name = "hello"
version = "0.1.0"
edition = "2021"
authors = ["Marc Carre <carre.marc@gmail.com>"]
description = "Hello, Rust! -- A cloud-native Rust sample project leveraging containers for build & release."
repository = "https://github.com/marccarre/rust-sample-project"
readme = "README.md"
keywords = ["rust", "sample", "project", "rustc", "cargo", "docker", "cloud", "cloud-native", "cloud native"]

[profile.release]
opt-level = 3      # Enable all optimisations.
lto = true         # Enable Link Time Optimisation.
codegen-units = 1  # Do not split code generation units.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
